--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,7 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Rock+3D&display=swap'); */
 /* @import  url('https://fonts.googleapis.com/css2?family=Bakbak+One&family=Jomhuria&display=swap'); */
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 :root {
   --background: #ffffff;
@@ -328,7 +326,10 @@ body {
   z-index: 9999;
   transform: translate(-50%, -50%);
   mix-blend-mode: difference;
-  transition: width 0.3s, height 0.3s, background-color 0.3s;
+  transition:
+    width 0.3s,
+    height 0.3s,
+    background-color 0.3s;
 }
 
 .custom-cursor.hovered {
@@ -345,7 +346,8 @@ body {
   right: -10%;
   width: 60%;
   height: 100%;
-  background-image: linear-gradient(var(--accent) 1px, transparent 1px),
+  background-image:
+    linear-gradient(var(--accent) 1px, transparent 1px),
     linear-gradient(90deg, var(--accent) 1px, transparent 1px);
   background-size: 40px 40px;
   opacity: 0.2;
